--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "sentry/sentry-laravel": "1.7.1",
+        "spatie/laravel-backup": "^6.9",
         "yabacon/paystack-php": "^2.1"
     },
     "require-dev": {
