--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "benjamincrozat/laravel-dropbox-driver": "^2.0",
         "devi/laravel-multi-referral": "~1.0",
         "egulias/email-validator": "^2.1",
         "fideloper/proxy": "^4.2",
