--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,13 @@
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "renatomarinho/laravel-page-speed": "^1.18",
         "sentry/sentry-laravel": "1.7.1",
         "spatie/laravel-backup": "^6.9",
         "yabacon/paystack-php": "^2.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
