--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,27 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PAYSTACK_KEY=
+PAYSTACK_SECRET=
+
+MANG_USER=
+MANG_PASS=
+
+SENTRY_LARAVEL_DSN=null
+
+ENABLE_BILL_PAYMENT=false
+ERROR_MESSAGE=
+ENABLE_WEB_ROUTE=true
+ENABLE_TEST_MODE=false
+
+ALERT_MIN_BALANCE=0
+BALANCE_ALERT_INTERVAL=3600
+
+DROPBOX_TOKEN=
+
+LARAVEL_PAGE_SPEED_ENABLE=true
+
+AIRTIME_ALERT=
+DATA_ALERT=
+CABLE_ALERT=
