--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "renatomarinho/laravel-page-speed": "^1.18",
         "sentry/sentry-laravel": "1.7.1",
         "spatie/laravel-backup": "^6.9",
+        "spatie/laravel-permission": "^3.13",
         "stuyam/laravel-phone-validator": "^1.0",
         "yabacon/paystack-php": "^2.1"
     },
