--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "benjamincrozat/laravel-dropbox-driver": "^2.0",
         "devi/laravel-multi-referral": "~1.0",
+        "doctrine/dbal": "^2.10",
         "egulias/email-validator": "^2.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
