--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "alt-three/locker": "^6.3",
         "benjamincrozat/laravel-dropbox-driver": "^2.0",
         "devi/laravel-multi-referral": "~1.0",
         "doctrine/dbal": "^2.10",
@@ -20,6 +21,7 @@
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "predis/predis": "*",
         "renatomarinho/laravel-page-speed": "^1.18",
         "sentry/sentry-laravel": "1.7.1",
         "spatie/laravel-backup": "^6.9",
