--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.5",
         "kingflamez/laravelrave": "^2.0",
+        "kreait/laravel-firebase": "^2.1",
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
