--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ moniwallet.json
 /storage/app/data.json
 /storage/app/electricity.json
 /storage/app/public
+/storage/app/
 /vendor
 .env
 .env.backup
