--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "devi/laravel-multi-referral": "~1.0",
         "doctrine/dbal": "^2.10",
         "egulias/email-validator": "^2.1",
+        "facade/ignition": "^2.3.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "kingflamez/laravelrave": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "kingflamez/laravelrave": "dev-master#e2b7fb0",
         "kreait/laravel-firebase": "^2.1",
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.2",
@@ -33,7 +34,6 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
-        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
