--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,15 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "kingflamez/laravelrave": "dev-master#e2b7fb0",
+        "kingflamez/laravelrave": "^3.0",
         "kreait/laravel-firebase": "^2.1",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "predis/predis": "*",
-        "renatomarinho/laravel-page-speed": "^1.18",
-        "sentry/sentry-laravel": "1.7.1",
+        "renatomarinho/laravel-page-speed": "^1.9",
+        "sentry/sentry-laravel": "^2.1",
         "spatie/laravel-backup": "^6.9",
         "spatie/laravel-permission": "^3.13",
         "stuyam/laravel-phone-validator": "^1.0",
@@ -36,8 +36,8 @@
         "barryvdh/laravel-debugbar": "^3.3",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
