--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "predis/predis": "*",
+        "rairlie/laravel-locking-session": "^1.1",
         "renatomarinho/laravel-page-speed": "^1.9",
         "sentry/sentry-laravel": "^2.1",
         "spatie/laravel-backup": "^6.9",
