--- a/composer.json
+++ b/composer.json
@@ -8,36 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
-        "alt-three/locker": "^6.4",
-        "benjamincrozat/laravel-dropbox-driver": "^2.0",
-        "devi/laravel-multi-referral": "~1.0",
+        "php": "^8.0",
         "doctrine/dbal": "^2.10",
-        "egulias/email-validator": "^2.1",
-        "facade/ignition": "^2.3.6",
+        "egulias/email-validator": "^3.2.1",
+        "spatie/laravel-ignition": "^1.0",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "kingflamez/laravelrave": "^3.0",
-        "kreait/laravel-firebase": "^2.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "predis/predis": "*",
         "rairlie/laravel-locking-session": "^1.1",
-        "renatomarinho/laravel-page-speed": "^1.9",
-        "sentry/sentry-laravel": "^2.1",
-        "spatie/laravel-backup": "^6.9",
-        "spatie/laravel-permission": "^3.13",
+        "renatomarinho/laravel-page-speed": "^2.1.0",
+        "sentry/sentry-laravel": "^3.1.1",
+        "spatie/laravel-backup": "^8.1.5",
+        "spatie/laravel-permission": "^5.6.0",
         "stuyam/laravel-phone-validator": "^1.0",
         "yabacon/paystack-php": "^2.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.12",
         "barryvdh/laravel-debugbar": "^3.3",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0"
     },
     "config": {
